--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -2,13 +2,13 @@
   <div class="container__small-card-content">
     <div class="small-card__photo">
       <img
-      src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTEGV7WmktsaipTXngtwg5qWGSUmAT1rkzuabIwMNcI4sgxKWlmagPMw18pizl0tZ59gUE&usqp=CAU"
+      src="{{photoCover}}"
       alt=""
       >
     </div>
 
     <div class="small-card__title">
-      <h1><a href="#">Saiu a nova versão do Angular</a></h1>
+      <h1><a href="#">{{cardTitle}}</a></h1>
     </div>
   </div>
 
